menu visibility only on toogle fixxed ios route change visibility bug

--- a/core/less/comps/base/drtv-menu.less
+++ b/core/less/comps/base/drtv-menu.less
@@ -18,6 +18,10 @@ cm-menu {
   .cm-menu-layer {
     .pos-fxd;
     .margin-auto;
+    .dpn;
+    &.is-active{
+      .dbl;
+    }
     width:@cm-app-width;
     top:0;
     bottom:0;
